<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">
    <TextView
            android:id="@+id/header"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/header"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/header"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
            android:id="@+id/textET"
            android:autofillHints=""
            android:hint="@string/msg_input"
            android:inputType="text"

            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/sub_header"

            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendBtn"

            android:text="@string/send_msg_btn"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/myPeach"
            android:background="@drawable/rounded_shape"

            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"


            app:layout_constraintTop_toBottomOf="@id/textET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
